# Luminescent

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MakefileNSO  README.md  config.cmake.template  exported.txt.template  fill_templates.sh  mangler.sh  switch.specs.template
cmake/: common.cmake  functions.cmake  main_target.cmake  releases.cmake  target.cmake  target_atmosphere.cmake  target_ryujinx.cmake  target_yuzu.cmake  toolchain.cmake
cmake/switch/: SwitchTools.cmake
cmake/targets/: atmosphere.cmake  modmanager.cmake  ryujinx.cmake  target_modmanager.cmake  yuzu.cmake
data/: maps.config
include/: AnimationPlayer.hpp  AttributeID.hpp  BaseEntity.hpp  DpData.hpp  EncountDataWork.hpp  EntityManager.hpp  FieldCharacterEntity.hpp  FieldEventEntity.hpp  FieldNagisaGymGearEntity.hpp  FieldObjectEntity.hpp  FieldPlayerEntity.hpp  GameManager.hpp  GimmickWork.hpp  ItemWork.hpp  MonsLv.hpp  MonsNo.hpp  PlayerWork.hpp  RandomGroupWork.hpp  Save.hpp  TairyouHasseiPokeManager.hpp  WeatherWork.hpp  ZoneWork.hpp  ZukanWork.hpp  areaID.hpp  data_wild_scaling.hpp  dual_slot.hpp  il2cpp-api.h  il2cpp.hpp  level_cap.hpp  log.h  logger.hpp  md5.h  mod_globals.hpp  stop_data_json.hpp  types.h  util.hpp  zoneID.hpp
include/Audio/: AudioInstance.hpp  AudioManager.hpp
include/Dpr/: BallDeco.hpp  Box.hpp  EncountTools.hpp  FieldObjectMove.hpp  FieldObjectRotateYaw.hpp  Item.hpp
include/Dpr/Box/: BoxPokemonWork.hpp
include/Dpr/EvScript/: EvDataManager.hpp  EvScriptData.hpp
include/Dpr/Field/: EncountResult.hpp  FieldEncount.hpp  SpFishing.hpp  SwayGrass.hpp
include/Dpr/Item/: ItemInfo.hpp
include/Dpr/Message/: MessageManager.hpp  MessageWordSetHelper.hpp
include/Dpr/Nx/: SaveSystem.hpp
include/Dpr/UI/: UIBag.hpp  UIWindowID.hpp  ZukanInfo.hpp
include/Effect/: EffectInstance.hpp
include/EvData/: ArgType.hpp  EvCmdID.hpp  EvData.hpp
include/GameData/: DataManager.hpp
include/Pml/: MonsNo.h  PmlUse.hpp  PokeParty.hpp  WazaData.hpp
include/System/: Action.hpp  Array.hpp  Object.hpp  String.hpp
include/UgMainProc/: SimbolMons.hpp
include/UnityEngine/: AssetBundle.hpp  AssetBundleCreateRequest.hpp  AsyncOperation.hpp  BoxCollider.hpp  Collider.hpp  Color.hpp  Component.hpp  Coroutine.hpp  CustomYieldInstruction.hpp  GameObject.hpp  Object.hpp  Random.hpp  YieldInstruction.hpp
include/XLSXContent/: FieldCommonParam.hpp  FieldEncountTable.hpp  LocalKoukanData.hpp  MapAttributeTable.hpp  MapInfo.hpp  MonohiroiTable.hpp  PokemonInfo.hpp  StopData.hpp
include/il2cpp/: <PrivateImplementationDetails>.h  AfterImage.h  AkAcousticSurface.h  AkAcousticSurfaceArray.h  AkAmbient.h  AkAmbientLargeModePositioner.h  AkAudioFormat.h  AkAudioInputManager.h  AkAudioInterruptionCallbackInfo.h  AkAudioListener.h  AkAudioSettings.h  AkAudioSourceChangeCallbackInfo.h  AkAuxSendArray.h  AkAuxSendValue.h  AkBank.h  AkBankCallbackInfo.h  AkBankManager.h  AkBaseArray<AkExternalSourceInfo>.h  AkBaseArray<AkObstructionOcclusionValues>.h  AkBaseArray<AkTriangle>.h  AkBaseArray_AkAcousticSurface_.h  AkBaseArray_AkDeviceDescription_.h  AkBaseArray_AkDiffractionPathInfo_.h  AkBaseArray_AkExternalSourceInfo_.h  AkBaseArray_AkObjectInfo_.h  AkBaseArray_AkObstructionOcclusionValues_.h  AkBaseArray_AkReflectionPathInfo_.h  AkBaseArray_AkSourceSettings_.h  AkBaseArray_AkTriangle_.h  AkBaseArray_AkVertex_.h  AkBaseArray_object_.h  AkBasePathGetter.h  AkBasePlatformSettings.h  AkCallbackInfo.h  AkCallbackManager.h  AkCallbackSerializer.h  AkChannelConfig.h  AkChannelEmitter.h  AkChannelEmitterArray.h  AkCommonAdvancedSettings.h  (+489 more)
include/libnx/: fs.h  fs_dev.h  internal.h  result.h  service.h  types.h
include/nn/: account.h  system_settings.ini
linkerscripts/: symbols.bd_113.ld  symbols.bd_130.ld  symbols.ld  syms100.ld  syms110.ld  syms113.ld
patches/: ability_changes.slpatch  ability_restoration.slpatch  affection.slpatch  affection.slpatch.113  alt_starter.slpatch  alt_starter.slpatch.disabled  area_id_override.slpatch  area_id_override.slpatch.disabled  asset_assistant.slpatch.disabled  asset_log.slpatch.disabled  badge_check.slpatch  battle_escape.slpatch  catch_rate.slpatch  charge.slpatch  charge.slpatch.disabled  codehook.slpatch  correct_hm.slpatch  custom_script.slpatch  custom_script.slpatch.disabled  debug_log.slpatch.disabled  drnd.slpatch  dualslot_incense.slpatch  dynamax.slpatch.disabled  enable_ds.slpatch  encounter_slots.slpatch  ev_iv_ui.slpatch  ev_wild_battle.slpatch.disabled  everlasting_candies.slpatch  exp_share.slpatch  exp_share_item.slpatch  form_add_pokemon.slpatch  form_change.slpatch  form_insertion_debug.slpatch.disabled  frisk.slpatch  gender_neutral_boutique.slpatch  hidden_power_ui.slpatch  hidden_power_ui.slpatch.disabled  honey_tree.slpatch  incense_double_battle.slpatch.disabled  infinite_tms.slpatch  (+41 more)
patches/configs/: 100.config  110.config  113.config
scripts/: gen_headers.py  gen_patch.py  logger_server.py  send_patch.py
source/: logger.cpp  module.cpp
source/patches/: settings.cpp
source/toggles/: affection.cpp  time_travel_penalty.cpp
src/: Calc.cpp  CoreParam.cpp  System.cpp  fs.c.bak  fs_dev.c.bak  logger.cpp  md5.cpp  module.cpp  mutex.c.bak  stop_data_json.cpp  util.cpp
src/patches/: ability_changes.cpp  ability_restoration.cpp  alt_starter.cpp  area_id_override.cpp  asset_assistant.cpp  asset_log.cpp  badge_check.cpp  battle_escape.cpp  correct_hm.cpp  custom_script.cpp  data_wild_scaling.cpp  debug_log.cpp  drnd.cpp  ds_slot.cpp  dualslot_incense.cpp  dynamax.cpp  encounter_slots.cpp  ev_iv_ui.cpp  everlasting_candies.cpp  exp_share_item.cpp  form_add_pokemon.cpp  form_change.cpp  form_insertion_debug.cpp  frisk.cpp  gender_neutral_boutique.cpp  hidden_power_ui.cpp  incense_double_battle.cpp  infinite_candies.cpp  infinitetms.cpp  item_changes.cpp  leek.cpp  level_cap.cpp  load_stop_data.cpp  local_koukan.cpp  local_trades_extension.cpp  move_restoration.cpp  pickup.cpp  pla_context_menu.cpp  radar_fix_ivs.cpp  repel_fix.cpp  (+18 more)
src/toggles/: affection.cpp  exp_share.cpp  time_travel_penalty.cpp
(+16214 files in other folders)
